--- a/boot-netty-rpc-core/pom.xml
+++ b/boot-netty-rpc-core/pom.xml
@@ -217,12 +217,11 @@
         </dependencies>
 
 
-
-
     </dependencyManagement>
 
     <profiles>
         <profile>
+            <!-- 发布环境 -->
             <id>release</id>
             <build>
                 <plugins>
